[package]
name = "vec-rac"
description = "Evolving AI vector racing"
version = "0.4.2"
authors = ["Jude Melton-Houghton <jwmhjwmh@gmail.com>"]
repository = "https://github.com/TurkeyMcMac/vec-rac"
readme = "README.md"
keywords = ["evolution", "ai"]
categories = ["games", "simulation"]
license = "MIT"
edition = "2018"


[dependencies]
getopts = "0.2"
rayon = "1.3.0"
